[package]
name = "obey"
version = "0.1.1"
edition = "2021"
authors = ["Rüdiger Klaehn <rklaehn@protonmail.com>"]
description = "Test utilities for collections"
repository = "https://github.com/rklaehn/obey"
license = "MIT OR Apache-2.0"
keywords = ["testing", "property", "fuzz"]
categories = ["development-tools::testing"]
readme = "README.md"
homepage = "https://github.com/rklaehn"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
